--- a/config/database.yml
+++ b/config/database.yml
@@ -19,5 +19,5 @@ test:
 production:
   <<: *default
   database: cms_device_app_production
-  username: cms_device_app
-  password: <%= ENV['CMS_DEVICE_APP_DATABASE_PASSWORD'] %>
+  username:
+  password:
