--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -166,7 +166,10 @@ test:
 production:
     clients:
         default:
-            uri:  mongodb://heroku_9t7cmgtl:h9drrqibo9knn520brb4qtkh3b@ds121203.mlab.com:21203/heroku_9t7cmgtl
-        options:
-            skip_version_check: true
-        safe: true
+          database: cms_device_app_production
+          hosts:
+            - localhost:27017
+          options:
+            read:
+              mode: :primary
+            max_pool_size: 1
